# rift

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  README.md  build.bat  rift.project.json  setup.ps1  sonar-project.properties  test.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  technical_task.yml
.github/workflows/: build.yml  sonar.yml  test.yml
docs/: ARCHITECTURE.md  BUILDING.md  COLLISION.md  EDITOR.md  MAINPAGE.md  PROJECT_MANIFEST.md  RENDERING.md  SETUP.md  TIME_SYSTEM.md  footer.html  mathjax-config.js  stylesheet.css
shaders/: BloomPrefilter.frag  FullscreenTriangle.vert  Geometry.frag  Geometry.vert  PostFXComposite.frag  bloom_down.frag  bloom_threshold.frag  bloom_up.frag  post.frag  sprite.frag  sprite.vert
src/: AmbienceConfig.h  AmbienceConfig.hpp  AnimationState.hpp  AnimationType.hpp  Appearance.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AuroraMath.hpp  AuroraTextures.cpp  AuroraTextures.hpp  BoolGrid.h  BoolGrid.hpp  CameraController.cpp  CameraController.h  CameraController.hpp  CharacterConstants.hpp  CharacterDirection.hpp  CharacterKinematics.cpp  CharacterKinematics.hpp  CharacterRender.cpp  CharacterRender.hpp  CharacterType.hpp  CollisionGeometry.hpp  CollisionMap.h  CollisionMap.hpp  CollisionResolver.cpp  CollisionResolver.h  CollisionResolver.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ColumnProxy.h  ColumnProxy.hpp  Console.cpp  Console.h  Console.hpp  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleCommands.hpp  DefaultedVector.h  DefaultedVector.hpp  (+177 more)
tests/: AmbientParticleSpawnTests.cpp  AuroraMathTests.cpp  AuroraTextureTests.cpp  BloomKarisFilterTests.cpp  CameraLookAheadTests.cpp  CloudShadowPositionTests.cpp  CollisionMapTests.cpp  CollisionResolverTests.cpp  CollisionSystemTests.cpp  ColorGradingTests.cpp  ConsoleBufferTests.cpp  ConsoleCommandRegistryTests.cpp  ConsoleCommandsTests.cpp  ConsoleParseTests.cpp  ConsoleStateTests.cpp  DialogueAccentTest.cpp  EcsSmokeTests.cpp  EditorBrushTransformTests.cpp  ElevationZTests.cpp  EntityStoreTests.cpp  FogOpacityTests.cpp  ForecastTests.cpp  HsvSaturationTests.cpp  LGGTests.cpp  LoggerTests.cpp  MenuStateTests.cpp  MockRenderer.hpp  MotionSystemTests.cpp  MoveCommandTests.cpp  NpcAiSystemTests.cpp  NpcIdentityTests.cpp  ParticleWindTests.cpp  PathfindingTests.cpp  PerspectiveTransformFloatTests.cpp  PlayerMovementTests.cpp  ProjectManifestTests.cpp  RenderSortTests.cpp  SaturationTests.cpp  SuspendPerspectiveDepthTests.cpp  TestStubs.cpp  (+11 more)
